Decreased mobile phones media query navbutton-item syntax width to scale better on galaxy fold devices. Also add fixed width to phones active, navbutton-item:hover because text was spilling out on some devices; fixed VW with is displaying visually better than min-max-fit-content values.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -484,7 +484,7 @@
 
     fieldset
     {
-        background-color: white;
+        background-color: rgb(255, 255, 255);
         margin: 0 0 5% 0;
         padding: 2%;
         display: flex;
@@ -711,7 +711,7 @@
 
         .navbutton-item
         {
-            width: 11vh;
+            width: 9vh;
         }
 
         .active,
@@ -719,8 +719,9 @@
         {
             border: 0;
             padding: 0;
-            background-color: black;
+            background-color: rgb(0, 0, 0);
             height: 7vh;
+            width: 20vw;
             align-items: center;
             box-shadow: none;
             justify-content: center;
